# web-app

./: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint-api.sh  docker-entrypoint-celery.sh  package.json
api/: .env.example  pyproject.toml  setup.cfg
api/carbonpath/: asgi.py  conftest.py  urls.py  wsgi.py
api/carbonpath/alerts/: admin.py  models.py  serializers.py  urls.py  views.py
api/carbonpath/alerts/migrations/: 0001_initial.py  0002_alter_alerttype_subscribers.py  0003_alter_alert_options.py  0004_auto_20220919_0555.py  0005_auto_20220919_0947.py  0006_alert_isread.py  0007_rename_isread_alert_is_read.py  0008_alter_alert_is_read.py
api/carbonpath/alerts/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
api/carbonpath/authentication/: backends.py  serializers.py  urls.py  utils.py  views.py
api/carbonpath/authentication/tests/: test_views.py
api/carbonpath/config/: __init__.py  base.py  celery_app.py  local.py  prod.py  test.py
api/carbonpath/core/: openapi.py  serializers.py
api/carbonpath/core/tests/: utils.py
api/carbonpath/dronedeploy/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
api/carbonpath/dronedeploy/migrations/: 0001_initial.py  0002_auto_20220928_0925.py  0003_auto_20220928_0959.py  0004_auto_20220928_1029.py  0005_alter_mapplan_jpeg_file.py  0006_alter_mapplan_jpeg_file.py  0007_alter_photoplan_download_path.py
api/carbonpath/dronedeploy/tests/: factories.py  test_models.py
api/carbonpath/faqs/: admin.py  models.py  serializers.py  urls.py  views.py
api/carbonpath/faqs/migrations/: 0001_initial.py  0002_alter_faq_options.py
api/carbonpath/faqs/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
api/carbonpath/ipfs/: ipfs.py  models.py  serializers.py  utils.py
api/carbonpath/ipfs/migrations/: 0001_initial.py
api/carbonpath/ipfs/tests/: factories.py  mocks.py  test_models.py  test_utils.py
api/carbonpath/server/: workers.py
api/carbonpath/templates/: alert.html  alert.txt
api/carbonpath/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
api/carbonpath/users/migrations/: 0001_initial.py  0002_auto_20220901_0151.py  0003_alter_user_email.py  0004_auto_20220916_0120.py  0005_populate_username.py  0006_alter_user_email.py  0007_user_saved_wells.py
api/carbonpath/wells/: admin.py  apps.py  constants.py  filters.py  managers.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
(+29 files in other folders)
